# respkit

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  demo_ledger.py  demo_ledger_resolver.py  demo_ledger_service.py  demo_ledger_session.py  run_rename_proposal.py
examples/demo_rename_proposal/: __init__.py  __main__.py  schemas.py  task.py
examples/demo_rename_proposal/prompts/: demo_rename_proposal.md  demo_rename_review.md
examples/rename_file_proposal/: __init__.py  schemas.py  task.py
examples/rename_file_proposal/prompts/: rename_file_proposal.md  rename_file_review.md
respkit/: __init__.py
respkit/actions/: __init__.py  base.py  json_artifact.py  manifest.py  markdown.py
respkit/artifacts/: __init__.py  writer.py
respkit/contracts/: __init__.py  base.py
respkit/inputs/: __init__.py
respkit/ledger/: __init__.py  cli.py  git.py  models.py  query.py  resolver.py  store.py
respkit/manifest/: __init__.py  writer.py
respkit/prompts/: __init__.py  renderer.py
respkit/providers/: __init__.py  base.py  openai_compatible.py
respkit/review/: __init__.py
respkit/runners/: __init__.py  batch.py  review.py  single.py
respkit/service/: __init__.py  adapters.py  backend.py  dispatcher.py
respkit/tasks/: __init__.py  definition.py  message.py  result.py
respkit/utils/: __init__.py  filesystem.py  run_id.py  status.py
respkit/validators/: __init__.py  base.py  simple.py
scripts/: evaluate_corpus.py  set_github_repo_metadata.sh  smoke_batch.sh  smoke_single.sh
tests/: test_hardening.py  test_ledger.py  test_provider_openai.py  test_run_rename_proposal.py  test_sdk_v1.py  test_service.py
tests/fixtures/rename_inputs/: ambiguous_actor.txt  clean_easy.txt  difficult_case.txt  messy_whitespace.txt  missing_time.txt  near_empty.txt
